--- a/accion.html
+++ b/accion.html
@@ -8,7 +8,16 @@
 <body>
 
 <div class="container">
-    <h2>Carrusel de Imágenes</h2>
+    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">ACCION</h2>
+    <style>
+        @font-face {
+            font-family: 'MiFuentePersonalizada';
+            src: url(css/popo.ttf) format('truetype')
+        }
+        body {
+            font-family: 'MiFuentePersonalizada', sans-serif;
+        }
+    </style>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicadores -->
         <ul class="carousel-indicators">
@@ -19,13 +28,13 @@
         <!-- Imágenes -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/hansel y gretel witch hunters.jpg" alt="Imagen 1" style="width: 100%; height: 1000px;">
+                <img src="Imagenes/hansel y gretel witch hunters.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/La delgada linea amarilla.jpg" alt="Imagen 2" style="width: 100%; height: 1000px;">
+                <img src="Imagenes/La delgada linea amarilla.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/The Grey.jpg" alt="Imagen 3" style="width: 100%; height: 1000px;">
+                <img src="Imagenes/The Grey.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
             </div>
         </div>
         <!-- Controles de carrusel -->
