--- a/accion2.html
+++ b/accion2.html
@@ -6,9 +6,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">ACCION-2</h2>
+    <style>
+        @font-face{
+            font-family:'MiFuentePersonalizada';
+            src: url(css/drius.ttf) format('truetype')
+        }
+       body {
+        font-family:'MiFuentePersonalizada', sans-serif;
+       }
+            
+    </style>
 
 <div class="container">
-    <h2>ACCION2</h2>
+
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicadores -->
         <ul class="carousel-indicators">
