--- a/accion.html
+++ b/accion.html
@@ -25,16 +25,22 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ul>
-        <!-- Imágenes -->
+        <!-- Imágenes con enlaces a videos de YouTube -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/hansel y gretel witch hunters.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/watch?v=imbaI7G3YPc" target="_blank">
+                    <img src="Imagenes/hansel y gretel witch hunters.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/La delgada linea amarilla.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/watch?v=gJI3jamNVEc" target="_blank">
+                    <img src="Imagenes/La delgada linea amarilla.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/The Grey.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/watch?v=b5qPTxpEw_M" target="_blank">
+                    <img src="Imagenes/The Grey.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                </a>
             </div>
         </div>
         <!-- Controles de carrusel -->
