--- a/terror2.html
+++ b/terror2.html
@@ -10,7 +10,16 @@
 <body>
 
 <div class="container">
-    <h2>Peliculas de Terror</h2>
+    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">TERROR</h2>
+    <style>
+        @font-face {
+            font-family: 'MiFuentePersonalizada';
+            src: url(Fuente/Aligator.otf) format('truetype')
+        }
+        body {
+            font-family: 'MiFuentePersonalizada', sans-serif;
+        }
+    </style>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicadores -->
         <ul class="carousel-indicators">
@@ -18,16 +27,22 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ul>
-        <!-- Imágenes -->
+        <!-- Imágenes con los enlaces de las peliculas obtenidas en Youtube -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/Terrifier.jpg" alt="Imagen 1" style="width: 100%; height: 1000px;">
+                <a href="https://www.youtube.com/watch?v=8VPwKXW8EOM" target="_blank">
+                    <img src="Imagenes/Terrifier.jpg" alt="Imagen 1" style="width: 100%; height: 1000px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/La novia.jpg" alt="Imagen 2" style="width: 100%; height: 1000px;">
+                <a href="https://www.youtube.com/watch?v=6ELMPcqzqpc" target="_blank">
+                    <img src="Imagenes/La novia.jpg" alt="Imagen 2" style="width: 100%; height: 1000px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/Estacion Zombie.jpg" alt="Imagen 3" style="width: 100%; height: 1000px;">
+                <a href="https://www.youtube.com/watch?v=fIDgCwbsNlg" target="_blank">
+                    <img src="Imagenes/Estacion Zombie.jpg" alt="Imagen 3" style="width: 100%; height: 1000px;">
+                </a>
             </div>
         </div>
         <!-- Controles de carrusel -->
@@ -47,12 +62,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-
-<style>
-    h2 {
-        font-family: 'MiFuentePersonalizada';
-        src: url('css/Aligator.otf') format('truetype');
-    }
-
-</style>
 </html>
