--- a/accion2.html
+++ b/accion2.html
@@ -14,10 +14,8 @@
         }
        body {
         font-family:'MiFuentePersonalizada', sans-serif;
-       }
-            
+       }   
     </style>
-
 <div class="container">
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -30,13 +28,19 @@
         <!-- Imágenes -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/HULK.jpg" alt="Imagen 1" style="width: 100%; height: 1000px;">
+                <a href="https://www.youtube.com/watch?v=_sdoQ_elqE0" target="_blank">
+                    <img src="Imagenes/HULK.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/Killer-Bean-Forever.jpg" alt="Imagen 2" style="width: 100%; height: 1000px;">
+                <a href="https://www.youtube.com/watch?v=Om1nLzRGsQI&t=3s" target="_blank">
+                    <img src="Imagenes/Killer-Bean-Forever.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/MIB.jpg" alt="Imagen 3" style="width: 100%; height: 1000px;">
+                <a href="https://www.youtube.com/watch?v=KvObdjnl6MU&t=193s" target="_blank">
+                    <img src="Imagenes/MIB.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                </a>
             </div>
         </div>
         <!-- Controles de carrusel -->
