--- a/terror2.html
+++ b/terror2.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="https://www.youtube.com/watch?v=fIDgCwbsNlg" target="_blank">
+                <a href="https://www.youtube.com/watch?v=dZ16aOP9I5c" target="_blank">
                     <img src="Imagenes/Estacion Zombie.jpg" alt="Imagen 3" style="width: 100%; height: 1000px;">
                 </a>
             </div>
