se agregaron mas paginas

--- a/UcaFlix.html
+++ b/UcaFlix.html
@@ -10,3 +10,15 @@
         <h1>
         <a href="accion.html" target="_blank">Peliculas Accion</a>
         </h1>
+        <h1>
+            <a href="accion2.html" target="_blank">Peliculas Accion2.0</a>
+        </h1>
+        <h1>
+            <a href="romance3.html" target="_blank">Peliculas Romance 1</a>
+        </h1>
+        <h1>
+            <a href="romance4.html" target="_blank">Peliculas Romance2.0</a>
+        </h1>
+        <h1>
+            <a href="terror2.html" target="_blank">Peliculas Terror2</a>
+        </h1>
