--- a/UcaFlix.html
+++ b/UcaFlix.html
@@ -8,5 +8,10 @@
     
     <body>
         <h1>
-        <a href="accion.html" target="_blank">Peliculas Accion</a>
+        <a href="accion.html" target="_blank" class="sin-fondo">Peliculas Accion</a>
         </h1>
+        <div class="fondo-personalizado">
+            <img src="Imagenes/96c0199f-7447-4661-b7fc-5f7861bfab28.jpg" alt="Imagen">
+        </div>  
+    </body>
+</html>
