--- a/accion.html
+++ b/accion.html
@@ -15,7 +15,7 @@
             src: url(css/popo.ttf) format('truetype')
         }
         body {
-            font-family: 'MiFuentePersonalizada', sans-serif;
+            font-family: 'MiFuentePersonalizada', sans-serif; 
         }
     </style>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -28,12 +28,12 @@
         <!-- Imágenes con enlaces a videos de YouTube -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="https://www.youtube.com/watch?v=imbaI7G3YPc" target="_blank">
+                <a href="https://www.youtube.com/watch?v=eLz3G6OYeuY" target="_blank">
                     <img src="Imagenes/hansel y gretel witch hunters.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="https://www.youtube.com/watch?v=gJI3jamNVEc" target="_blank">
+                <a href="https://www.youtube.com/watch?v=SXH7eZQFJM8" target="_blank">
                     <img src="Imagenes/La delgada linea amarilla.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
                 </a>
             </div>
