--- a/romance3.html
+++ b/romance3.html
@@ -28,13 +28,19 @@
         <!-- Imágenes -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/amar te duele.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/embed/RNgfbmfh4Xs?si=pBeQ58bPCrrESJTE" target="_blank">
+                    <img src="Imagenes/amar te duele.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;"> 
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/a dos metros de ti png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/embed/rCqvcs_Q0BY?si=rTV0gBS26S3rRWG3" target="_blank">
+                    <img src="Imagenes/a dos metros de ti png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/amor de media noche png.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/embed/oZVJA7jC2Yo?si=SLvyDdh1ftGaTYf8" target="_blank">
+                    <img src="Imagenes/amor de media noche png.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                </a>
             </div>
         </div>
         <!-- Controles de carrusel -->
