--- a/romance4.html
+++ b/romance4.html
@@ -28,13 +28,19 @@
         <!-- Imágenes -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/bajo la misma estrella png.png" alt="Imagen 1" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/embed/_nbvAIkfQq4?si=VX019QOvCtPmaaep" target="_blank">
+                    <img src="Imagenes/bajo la misma estrella png.png" alt="Imagen 1" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/perfume de violetas png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/embed/eiy8E3oNB2g?si=REetcymzRMxbHiJv" target="_blank">
+                    <img src="Imagenes/perfume de violetas png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                </a>
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/toda-una-vida-en-un-año.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/embed/PJmjxKOGk5Q?si=hJ8ZFj_FORa8QRns" target="_blank">
+                    <img src="Imagenes/toda-una-vida-en-un-año.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                </a>
             </div>
         </div>
         <!-- Controles de carrusel -->
