--- a/terror.html
+++ b/terror.html
@@ -1,11 +1,11 @@
-!DOCTYPE html>
+
 <html>
 <head>
     <title>Carrusel de Imágenes</title>
     <!-- Incluye Bootstrap CSS (asegúrate de tener acceso a Internet) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
-  <link rel="stylesheet" href="mifuentedaniel.css">
+  <link rel="stylesheet" href="mifuente.css">
 </head>
 <body>
 
