se agrego otra pagina

--- a/UcaFlix.html
+++ b/UcaFlix.html
@@ -20,5 +20,8 @@
             <a href="romance4.html" target="_blank">Peliculas Romance2.0</a>
         </h1>
         <h1>
+            <a href="terror.html" target="_blank">Terror1</a>
+        </h1>
+        <h1>
             <a href="terror2.html" target="_blank">Peliculas Terror2</a>
         </h1>
