--- a/romance3.html
+++ b/romance3.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,14 +8,14 @@
 <body>
 
 <div class="container">
-    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">ROMANCE</h2>
+    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">ACCION</h2>
     <style>
         @font-face {
             font-family: 'MiFuentePersonalizada';
-            src: url(css/ROMA.ttf) format('truetype')
+            src: url(css/popo.ttf) format('truetype')
         }
         body {
-            font-family: 'MiFuentePersonalizada', sans-serif;
+            font-family: 'MiFuentePersonalizada', sans-serif; 
         }
     </style>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -26,21 +25,21 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ul>
-        <!-- Imágenes -->
+        <!-- Imágenes con enlaces a videos de YouTube -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="https://www.youtube.com/embed/RNgfbmfh4Xs?si=pBeQ58bPCrrESJTE" target="_blank">
-                    <img src="Imagenes/amar te duele.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;"> 
+                <a href="https://www.youtube.com/watch?v=eLz3G6OYeuY" target="_blank">
+                    <img src="Imagenes/hansel y gretel witch hunters.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="https://www.youtube.com/embed/rCqvcs_Q0BY?si=rTV0gBS26S3rRWG3" target="_blank">
-                    <img src="Imagenes/a dos metros de ti png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/watch?v=SXH7eZQFJM8" target="_blank">
+                    <img src="Imagenes/La delgada linea amarilla.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="https://www.youtube.com/embed/oZVJA7jC2Yo?si=SLvyDdh1ftGaTYf8" target="_blank">
-                    <img src="Imagenes/amor de media noche png.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
+                <a href="https://www.youtube.com/watch?v=b5qPTxpEw_M" target="_blank">
+                    <img src="Imagenes/The Grey.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
                 </a>
             </div>
         </div>
@@ -61,118 +60,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Carrusel de Imágenes</title>
-    <!-- Incluye Bootstrap CSS (asegúrate de tener acceso a Internet) -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-
-<div class="container">
-    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">ROMANCE</h2>
-    <style>
-        @font-face {
-            font-family: 'MiFuentePersonalizada';
-            src: url(css/ROMA.ttf) format('truetype')
-        }
-        body {
-            font-family: 'MiFuentePersonalizada', sans-serif;
-        }
-    </style>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicadores -->
-        <ul class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ul>
-        <!-- Imágenes -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="Imagenes/amar te duele.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
-            </div>
-            <div class="carousel-item">
-                <img src="Imagenes/a dos metros de ti png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
-            </div>
-            <div class="carousel-item">
-                <img src="Imagenes/amor de media noche png.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
-            </div>
-        </div>
-        <!-- Controles de carrusel -->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Siguiente</span>
-        </a>
-    </div>
-</div>
-
-<!-- Incluye Bootstrap JS y jQuery (asegúrate de tener acceso a Internet) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-</body>
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Carrusel de Imágenes</title>
-    <!-- Incluye Bootstrap CSS (asegúrate de tener acceso a Internet) -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-
-<div class="container">
-    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">ROMANCE</h2>
-    <style>
-        @font-face {
-            font-family: 'MiFuentePersonalizada';
-            src: url(css/ROMA.ttf) format('truetype')
-        }
-        body {
-            font-family: 'MiFuentePersonalizada', sans-serif;
-        }
-    </style>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicadores -->
-        <ul class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ul>
-        <!-- Imágenes -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="Imagenes/amar te duele.jpg" alt="Imagen 1" style="width: 100%; height: 1520px;">
-            </div>
-            <div class="carousel-item">
-                <img src="Imagenes/a dos metros de ti png.jpg" alt="Imagen 2" style="width: 100%; height: 1520px;">
-            </div>
-            <div class="carousel-item">
-                <img src="Imagenes/amor de media noche png.jpg" alt="Imagen 3" style="width: 100%; height: 1520px;">
-            </div>
-        </div>
-        <!-- Controles de carrusel -->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Siguiente</span>
-        </a>
-    </div>
-</div>
-
-<!-- Incluye Bootstrap JS y jQuery (asegúrate de tener acceso a Internet) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-</body>
->>>>>>> fb7c90d36b8e581335833de6329e779a3b1f0dff
 </html>
