--- a/terror2.html
+++ b/terror2.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">TERROR</h2>
+    <h2 class="titulo-accion" style="font-size: 100px; text-align: center; margin-top: 50px;">TERROR Daniel</h2>
     <style>
         @font-face {
             font-family: 'MiFuentePersonalizada';
